# minimum-bisection-problem-graph-theory

./: CMakeLists.txt  README.md  main.cpp
src/method/constructive/: constructive.cpp  constructive.h
src/method/exact/: exact.cpp  exact.h
src/method/local_search/: local_search.cpp  local_search.h
src/method/tabu_search/: tabu_search.cpp  tabu_search.h
src/model/Graph_class/: Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
